# archives-synch

./: movie_list.txt  psychology_app_ideas.md
LSTM-RL-Trader/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  REVIEW_MASTER.md  docker-compose.yml  pyproject.toml  requirements.txt  trading_lstm_rl_app.py
LSTM-RL-Trader/documentos/: AGENTS.md  README.md  REVIEW_MASTER.md  documento_maestro_lstm_rl_trading_nicegui.md  pasos_accionables.md
LSTM-RL-Trader/tests/: conftest.py  test_config.py  test_coverage.py  test_experiment.py  test_logging.py
Proyectos/: debug_sequential_master.sh  nightly_master.sh  nocturnal_refactor_agent.sh
Proyectos/RObot gmail/: .dockerignore  .gitignore  CLAUDE.md  DOCUMENTO_MAESTRO.md  gmail_bulk_trash.py  gmail_gui.py
Proyectos/_memory/: _index.md
Proyectos/archivex synch/: .gitignore  ADR-001-credential-storage.md  CHANGELOG.md  CLAUDE.md  DOCUMENTO_MAESTRO.md  README.md  archivex synch_analysis_20260527_092423.txt  archivex synch_analysis_20260527_093320.txt  archivex_sync.py  calibrate_archivex.py  calibrate_gui.py  pyproject.toml  recon.py  requirements.txt  sync.py  test_calendar.py  vision_driver.py
Proyectos/archivex synch/.github/workflows/: ci.yml
Proyectos/archivex synch/docs/: SPEC.md
Proyectos/archivex synch/docs/superpowers/plans/: 2026-05-25-archivex-sync-rewrite.md
Proyectos/archivex synch/docs/superpowers/specs/: 2026-05-25-opus-recon-knowledge-base-design.md  2026-05-25-recon-mejoras-design.md
Proyectos/archivex synch/memory/: MEMORY.md
Proyectos/archivex synch/tests/: test_archivex_sync.py  test_recon.py  test_sync.py
Proyectos/artefacto pacientes/: DOCUMENTO_MAESTRO.md  README.md  artefacto pacientes_analysis_20260527_093324.txt  decision_tool.html  diario_reflexion.md  ejercicio_mindfulness.md  guia_terapeutas.md  plan_seguridad.md  plantilla_metas.md  regulacion_emocional.md  relajacion_pacientes.html  restructuracion_cognitiva.md  segumiento_progreso.md  tarjeta_coping_rapido.md
Proyectos/ayuda programacion/: .coverage  AGENTE_AUTONOMO.md  DOCUMENTO_MAESTRO.md  DOCUMENTO_MAESTRO_DE_INGENIERIA.md  LOOP_AGENT.md  SUPERREVISION.md  ayuda programacion_analysis_20260527_093316.txt  coverage.xml  data-analist-skill.md  data-analist.skill  harness-dev.md  minirevision.md  progress.json  pyproject.toml  run_tests.py  senior_ai_project_review_framework.md
Proyectos/ayuda programacion/harness-template/: CLAUDE.md  feature_list.json  init.sh  progress.md
Proyectos/ayuda programacion/src/: __init__.py  main.py
Proyectos/ayuda programacion/src/models/: __init__.py  database.py
Proyectos/ayuda programacion/src/services/: __init__.py  logging_service.py
Proyectos/ayuda programacion/src/ui/: __init__.py
Proyectos/ayuda programacion/src/ui/components/: __init__.py  base.py
Proyectos/ayuda programacion/src/utils/: __init__.py
Proyectos/ayuda programacion/tests/: __init__.py  test_database.py  test_logging_service.py  test_ui_components.py
Proyectos/equilibria/: CLAUDE.md  DOCUMENTO_MAESTRO.md  Notas Pacientes.md  app.py  cuentas equilibria.numbers  equilibria_analysis_20260527_092541.txt  equilibria_analysis_20260527_093256.txt  equilibria_analysis_20260527_093537.txt  equilibria_analysis_20260527_100201.txt  migrar_datos.py  requirements.txt
Proyectos/logs/: LSTM RL_analysis_20260527_155834.txt  Trader LSTM_analysis_20260527_155901.txt  analysis_results_20260527_091713.txt  ayuda-programacion_errors_20260527_232438.txt  ayuda-programacion_errors_20260528_081705.txt  ayuda-programacion_tests_20260527_232438.txt  ayuda-programacion_tests_20260528_081705.txt  debug_analysis.sh  debug_analysis_11241.sh  debug_analysis_Trader LSTM_1779866766.sh  debug_sequential_analysis.sh  debug_sequential_simple.sh  dt-trading-model_errors_20260527_222243.txt  dt-trading-model_tests_20260527_222243.txt  equilibria_analysis_20260527_155831.txt  equilibria_errors_20260527_232334.txt  equilibria_errors_20260528_081705.txt  equilibria_tests_20260527_232334.txt  equilibria_tests_20260527_232438.txt  lstm-rl-trader_tests_20260527_232438.txt  lstm-rl-trader_tests_20260528_081705.txt  master_bug_report_20260527.md  nightly_master_report_20260528_082236.md  nightly_master_report_20260528_142812.md  nocturnal_refactor_final_report_20260527_222032.md  nocturnal_refactor_final_report_20260527_222243.md  nocturnal_refactor_final_report_20260527_232334.md  nocturnal_refactor_final_report_20260527_232438.md  nocturnal_refactor_final_report_20260528_081705.md  psych-billing-app_analysis_20260527_155840.txt  psych-billing-app_tests_20260528_081705.txt  trader-supersimple_tests_20260528_081705.txt
Proyectos/recursos gratis psicologia/: DOCUMENTO_MAESTRO.md  Mejores_Recursos_Gratuitos_Psicologos.md  (+1 more)
RObot gmail/: .env.example  CHANGELOG.md  Dockerfile  README.md  gmail_bulk_trash.py  senders.json
artefacto pacientes/: diario_reflexion.md  ejercicio_mindfulness.md  guia_terapeutas.md  plan_seguridad.md  plantilla_metas.md  regulacion_emocional.md  restructuracion_cognitiva.md  segumiento_progreso.md  tarjeta_coping_rapido.md
(+127 files in other folders)
