[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivex-sync"
version = "1.0.0"
description = "Sincroniza citas de Google Calendar con Archivex Clinical (macOS)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Archivex Sync"}]

dependencies = [
    "pyautogui>=0.9.53",
    "Pillow>=10.1.0",
    "google-auth>=2.25.2",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.107.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
